# Attaky-Claw

./: .gitignore  CHANGES.md  README.md  README_CN.md
application/edge_agent/: sdkconfig.defaults
application/edge_agent/main/: Kconfig.projbuild  idf_component.yml  main.c
components/claw_modules/claw_core/: Kconfig
components/common/app_claw/: app_claw.c  idf_component.yml
components/common/display_arbiter/: display_arbiter.c
components/common/emote/: CMakeLists.txt  Kconfig  emote.c
components/common/emote/assets_local/320_240/: layout.json
components/common/emote/assets_local/emoji_large/: status_blue.eaf  status_green.eaf  status_red.eaf  status_yellow.eaf
components/common/emote/include/: emote.h
components/common/setup_ui/: CMakeLists.txt  idf_component.yml  setup_lvgl_port.c  setup_lvgl_port.h  setup_model.c  setup_model.h  setup_screens.c  setup_screens.h  setup_sm.c  setup_sm.h  setup_status_format.c  setup_status_format.h  setup_ui.c  setup_validate.c  setup_validate.h  setup_worker.c  setup_worker.h
components/common/setup_ui/include/: setup_ui.h
components/common/setup_ui/test_host/: Makefile  test_main.c
components/common/status_led/: CMakeLists.txt  status_led.c  status_led_logic.c  status_led_logic.h
components/common/status_led/include/: status_led.h
components/common/status_led/test_host/: Makefile  test_status_led_logic.c
components/common/status_state/: CMakeLists.txt  status_state.c
components/common/wifi_manager/: wifi_manager.c
components/lua_modules/lua_module_call_capability/: README.md
docs/: LICENSE  astro.config.mjs  package.json5
docs/src/assets/: router_rules.schema.json
docs/src/components/: DocsSiteTitle.astro
docs/src/flash-tool/: i18n.ts
docs/src/layouts/: SiteShell.astro
tools/: emote_cycle.py
tools/eaf/: FORMAT_NOTES.md  eaf_encode.py  eaf_refdec.py  test_eaf_roundtrip.py
tools/status_circle/: build_status_eaf.sh  gen_breath.py  test_gen_breath.py
(+98 files in other folders)
